# MCP-OPENAPI-Excel

./: .gitignore  =3.1.0  README.md  pyproject.toml
.github/workflows/: publish-container.yml  test-publish.yml
src/: __init__.py  main.py  mcp_server.py
src/adapters/: __init__.py  calamine_adapter.py  openpyxl_adapter.py  xlsxwriter_adapter.py
src/exceptions/: __init__.py  excel_exceptions.py
src/models/: __init__.py  excel_models.py
src/services/: __init__.py  excel_service.py
tests/: __init__.py  conftest.py  test_api.py  test_calamine_adapter.py  test_excel_service.py  test_mcp.py  test_openpyxl_adapter.py  test_xlsxwriter_adapter.py
